syntax = "proto3";

package org_glowroot_collector_spi;

option java_package = "org.glowroot.collector.proto";

message ProfileTree {

  repeated string package_name = 1;
  repeated string class_name = 2;
  repeated string method_name = 3;
  repeated string file_name = 4;
  repeated string timer_name = 5;

  // node ordering is pre-order depth-first
  // IMPORTANT there can be multiple "root" nodes (with depth=0)
  repeated ProfileNode node = 6;

  message ProfileNode {
    int32 depth = 1;
    int32 package_name_index = 2;
    int32 class_name_index = 3;
    int32 method_name_index = 4;
    int32 file_name_index = 5;
    sint32 line_number = 6;
    LeafThreadState leaf_thread_state = 7;
    int64 sample_count = 8;
    repeated int32 timer_name_index = 9;
  }

  enum LeafThreadState {
    NONE = 0; // means not a leaf node
    NEW = 1;
    RUNNABLE = 2;
    BLOCKED = 3;
    WAITING = 4;
    TIMED_WAITING = 5;
    TERMINATED = 6;
  }
}
